--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@types/react-router": "^5.1.11",
     "@types/react-router-dom": "^5.1.7",
     "axios": "^1.1.3",
+    "dayjs": "^1.11.6",
     "formik": "^2.2.9",
     "history": "^4.9.0",
     "http-proxy-middleware": "^2.0.6",
@@ -46,13 +47,16 @@
     "workbox-routing": "^5.1.4",
     "workbox-strategies": "^5.1.4",
     "workbox-streams": "^5.1.4",
+    "yup": "^0.32.11",
     "zustand": "^4.1.4"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test --transformIgnorePatterns 'node_modules/(?!(@ionic/react|@ionic/react-router|@ionic/core|@stencil/core|ionicons)/)'",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "build:android": "ionic capacitor build android",
+    "build:ios": "ionic capacitor build ios"
   },
   "eslintConfig": {
     "extends": [
