--- a/package.json
+++ b/package.json
@@ -3,8 +3,10 @@
   "version": "0.0.1",
   "private": true,
   "dependencies": {
+    "@awesome-cordova-plugins/barcode-scanner": "^6.2.0",
     "@capacitor/android": "4.5.0",
     "@capacitor/app": "4.1.1",
+    "@capacitor/camera": "^4.1.4",
     "@capacitor/core": "4.5.0",
     "@capacitor/haptics": "4.1.0",
     "@capacitor/ios": "4.5.0",
@@ -28,6 +30,7 @@
     "history": "^4.9.0",
     "http-proxy-middleware": "^2.0.6",
     "ionicons": "^6.0.3",
+    "phonegap-plugin-barcodescanner": "git+https://github.com/StarleyDev/barcodescanner-sdk31.git",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router": "^5.2.0",
@@ -55,6 +58,8 @@
     "build": "react-scripts build",
     "test": "react-scripts test --transformIgnorePatterns 'node_modules/(?!(@ionic/react|@ionic/react-router|@ionic/core|@stencil/core|ionicons)/)'",
     "eject": "react-scripts eject",
+    "dev:android": "ionic cap run android -l --external",
+    "dev:ios": "ionic cap run ios -l --external",
     "build:android": "ionic capacitor build android",
     "build:ios": "ionic capacitor build ios"
   },
