--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@capacitor/status-bar": "4.1.0",
     "@ionic/react": "^6.0.0",
     "@ionic/react-router": "^6.0.0",
+    "@lingui/react": "^3.15.0",
     "@tanstack/react-query": "^4.16.1",
     "@testing-library/jest-dom": "^5.11.9",
     "@testing-library/react": "^13.3.0",
@@ -63,7 +64,9 @@
     "dev:android": "ionic cap run android -l --address=127.0.0.1",
     "dev:ios": "ionic cap run ios -l --address=127.0.0.1",
     "build:android": "ionic capacitor build android",
-    "build:ios": "ionic capacitor build ios"
+    "build:ios": "ionic capacitor build ios",
+    "extract": "lingui extract",
+    "compile": "lingui compile"
   },
   "eslintConfig": {
     "extends": [
@@ -84,7 +87,10 @@
     ]
   },
   "devDependencies": {
-    "@capacitor/cli": "4.5.0"
+    "@capacitor/cli": "4.5.0",
+    "@lingui/cli": "^3.15.0",
+    "@lingui/macro": "^3.15.0",
+    "make-plural": "^7.2.0"
   },
   "description": "An Ionic project"
 }
