--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "phonegap-plugin-barcodescanner": "git+https://github.com/StarleyDev/barcodescanner-sdk31.git",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-lazy-load-image-component": "^1.5.6",
     "react-router": "^5.2.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "^5.0.0",
@@ -90,6 +91,7 @@
     "@capacitor/cli": "4.5.0",
     "@lingui/cli": "^3.15.0",
     "@lingui/macro": "^3.15.0",
+    "@types/react-lazy-load-image-component": "^1.5.2",
     "make-plural": "^7.2.0"
   },
   "description": "An Ionic project"
